RESOLVED FIXED59427
Fix OwnPtr strict errors in CrossThreadTask.h
https://bugs.webkit.org/show_bug.cgi?id=59427
Summary Fix OwnPtr strict errors in CrossThreadTask.h
David Levin
Reported 2011-04-25 23:47:04 PDT
Fix OwnPtr strict errors in CrossThreadTask.h
Attachments
Patch (4.46 KB, patch)
2011-04-25 23:47 PDT, David Levin
no flags
Patch (4.47 KB, patch)
2011-04-25 23:51 PDT, David Levin
abarth: review+
abarth: commit-queue-
David Levin
Comment 1 2011-04-25 23:47:31 PDT
David Levin
Comment 2 2011-04-25 23:51:15 PDT
Adam Barth
Comment 3 2011-04-25 23:52:25 PDT
Comment on attachment 91074 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=91074&action=review > Source/WebCore/dom/CrossThreadTask.h:99 > - return new CrossThreadTask(method, parameter1, parameter2); > + return adoptPtr(new CrossThreadTask(method, parameter1, parameter2)); Broken indent?
David Levin
Comment 4 2011-04-25 23:59:58 PDT
WebKit Review Bot
Comment 5 2011-04-26 04:12:11 PDT
http://trac.webkit.org/changeset/84888 might have broken SnowLeopard Intel Release (WebKit2 Tests)
Note You need to log in before you can comment on or make changes to this bug.