Fix OwnPtr strict errors in CrossThreadTask.h https://bugs.webkit.org/show_bug.cgi?id=59427

Reviewed by Adam Barth.

* dom/CrossThreadTask.h:
(WebCore::CrossThreadTask1::create):
(WebCore::CrossThreadTask2::create):
(WebCore::CrossThreadTask3::create):
(WebCore::CrossThreadTask4::create):
(WebCore::CrossThreadTask5::create):
(WebCore::CrossThreadTask6::create):
(WebCore::CrossThreadTask7::create):
(WebCore::CrossThreadTask8::create):

Canonical link: https://commits.webkit.org/74610@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84888 268f45cc-cd09-0410-ab3c-d52691b4dbfc